@@ -147,6 +147,22 @@ DBEnv Methods
    <http://www.oracle.com/technology/documentation/berkeley-db/db/
    api_c/env_set_timeout.html>`__
 
+.. function:: get_mp_max_openfd()
+
+   Returns the maximum number of file descriptors the library will open
+   concurrently when flushing dirty pages from the cache.
+   `More info...
+   <http://www.oracle.com/technology/documentation/berkeley-db/db/
+   api_reference/C/mempget_mp_max_openfd.html>`__
+
+.. function:: set_mp_max_openfd(max_open_fd)
+
+   Limits the number of file descriptors the library will open
+   concurrently when flushing dirty pages from the cache. 
+   `More info...
+   <http://www.oracle.com/technology/documentation/berkeley-db/db/
+   api_reference/C/mempset_mp_max_openfd.html>`__
+
 .. function:: set_shm_key(key)
 
    Specify a base segment ID for Berkeley DB environment shared memory
